--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,109 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
+
+@theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-inter: var(--font-inter);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --accent: 206 49% 82%;
+  --accent-foreground: 206 46% 24%;
+  --background: 200 33% 96%;
+  --background-accent: 203 34% 86%;
+  --border: 202 31% 76%;
+  --card: 200 33% 96%;
+  --card-foreground: 204 45% 4%;
+  --foreground: 204 45% 4%;
+  --input: 202 31% 76%;
+  --muted: 203 34% 86%;
+  --muted-foreground: 201 22% 30%;
+  --popover: 200 33% 96%;
+  --popover-foreground: 204 45% 4%;
+  --primary: 200 98% 39%;
+  --primary-foreground: #93dbff;
+  --ring: 204 45% 4%;
+  --secondary: 232 52% 84%;
+  --secondary-foreground: 232 47% 28%;
+}
+.dark {
+  --accent: 206 47% 33%;
+  --accent-foreground: 207 49% 89%;
+  --background: #18242b;
+  --background-accent: 202 28% 13%;
+  --border: 200 25% 21%;
+  --card: 204 45% 4%;
+  --card-foreground: 200 33% 96%;
+  --foreground: 200 33% 96%;
+  --input: 200 25% 21%;
+  --muted: 202 28% 13%;
+  --muted-foreground: 202 23% 57%;
+  --popover: 204 45% 4%;
+  --popover-foreground: 200 33% 96%;
+  --primary: 200 99% 57%;
+  --primary-foreground: 200 96% 20%;
+  --ring: 200 33% 96%;
+  --secondary: 232 47% 28%;
+  --secondary-foreground: 231 52% 90%;
+}
+
+body {
+  font-family: var(--font-inter);
+}
+
+@layer base {
+  body {
+    @apply bg-background text-foreground;
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+@layer components {
+  .container {
+    @apply mx-auto px-[20px] lg:px-0 w-full md:w-[768px] lg:w-[1280px];
+  }
+  .icon {
+    @apply size-[20px] text-primary hover:text-cyan-400;
+  }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer utilities {
+  h1 {
+    @apply text-5xl;
   }
 }
