--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,7 @@ body {
 
 @layer components {
   .container {
-    @apply mx-auto px-[20px] lg:px-0 w-full md:w-[768px] lg:w-[1280px];
+    @apply mx-auto px-[20px] lg:px-0 w-full md:w-[768px] lg:max-w-[1280px];
   }
   .icon {
     @apply size-[20px] text-primary hover:text-cyan-400;
